CANDLEPIN-718: Create entitlement certificate generator